force-app/main/default/objects/Candidate_Skill__c/Candidate_Skill__c.object-meta.xml
<CustomObject>
    <label>Candidate Skill</label>
    <nameField>
        <displayFormat>CSN-{00000}</displayFormat>
        <label>Candidate Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Skill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>