force-app/main/default/objects/Candidate_Skill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Candidate Skills</relationshipLabel>
    <relationshipName>Candidate_Skill</relationshipName>
    <type>Lookup</type>
</CustomField>