force-app/main/default/objects/Candidate_Skill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>Skill__c</columns>
    <columns>Years_of_Experience__c</columns>
    <columns>Skill_Level__c</columns>
    <columns>Skill_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>